# markdown-tools

./: .gitignore  README.md  index.html  package-lock.json  package.json  progress.txt  task.json  vite.config.ts
.github/workflows/: build.yml
docs/: README.de.md  README.en.md  README.es.md  README.fr.md  README.ja.md  README.ru.md
docs/images/: README.md
public/: manifest.json  sw.js
scripts/: start-dev.ps1
src/: main.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
src/scripts/: router.ts
src/scripts/pages/: html-to-md.ts  md-to-docx.ts  md-to-html.ts  md-to-pdf.ts  pdf-to-word.ts  word-to-md.ts  word-to-pdf.ts
src/scripts/utils/: fileSaver.ts  fileSize.ts  i18n.ts  notification.ts  progress.ts  theme.ts  workerHelper.ts
src/scripts/workers/: markdown.worker.ts
src/styles/: base.css  glass.css  main.css  variables.css
src/styles/components/: buttons.css  editor.css  footer.css  navbar.css  notification.css  uploader.css
src/styles/pages/: converter.css  home.css
